--- a/main.css
+++ b/main.css
@@ -1,1 +1,5 @@
-body {background-color: lightseagreen}/*or any color of your choosing*/
+body {background-color: lightseagreen;
+    text-align: center;
+}
+
+    /*or any color of your choosing*/
