--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {background-color: lightseagreen;
     text-align: center;
+    font-family: fantasy;
 }
 
     /*or any color of your choosing*/
