--- a/main.css
+++ b/main.css
@@ -2,5 +2,11 @@ body {background-color: lightseagreen;
     text-align: center;
     font-family: fantasy;
 }
+.secret {
+    opacity: 0.5;
+}
 
+ul {
+    list-style: none;
+}
     /*or any color of your choosing*/
