--- a/main.css
+++ b/main.css
@@ -9,4 +9,8 @@ body {background-color: lightseagreen;
 ul {
     list-style: none;
 }
-    /*or any color of your choosing*/
+table, th, td {
+    border: 1px solid gray;
+    margin: auto;
+  }
+  
