--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ body {background-color: lightseagreen;
     text-align: center;
     font-family: fantasy;
 }
+
+#container {
+    width: 100%;
+}
 .secret {
     opacity: 0.5;
 }
